# case_studies

./: Aggregated Censoring.ipynb  Explainable AI vs Causal Inference.ipynb  How long should you run an AB Test for?.ipynb  Introduction to Interrupted Time Series.ipynb  Multiple Comparisons.ipynb  PyMC out of sample predictions.ipynb  Time Series with Numpyro - Random Walk Intro.ipynb  Time to Conversion Matters.ipynb  Uncertainty intervals over p values.ipynb  Why we AB Test.ipynb
censored_demand/: Censored Demand.ipynb  pyproject.toml
censored_demand/censored_demand/: plotting.py  pseudo_records.py  rental_model.py
censored_demand/data/: product_purchases.csv  rentals.csv  stock_levels.csv  true_demand_daily.csv  true_params.csv
censored_demand/src/: optimize.py  plotting.py  pseudo_records.py  rental_model.py
implementing_gen_gamma/: Generalized Gamma Distribution in PyMC.ipynb
implementing_gen_gamma/src/: gen_gamma.py
implementing_gen_gamma/tests/: test_gen_gamma.py
numpyro_dataloaders/: Testing Data Loaders.ipynb  pyproject.toml
poisson_decay_ts/: poisson decay ts-v3.ipynb
poisson_ts/: poisson decay ts-v2.ipynb  poisson decay ts.ipynb
