[tool.poetry]
name = "censored-demand"
version = "0.1.0"
description = ""
authors = ["Kyle Caron"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pandas = "^2.1.4"
jax = "^0.4.23"
matplotlib = "^3.8.2"
seaborn = "^0.13.1"
numpyro = "^0.13.2"
pymc = "^5.10.3"
numpy = "^1.26.3"

[tool.poetry.group.dev.dependencies]
notebook = "^7.0.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
