[tool.poetry]
name = "numpyro-dataloaders"
version = "0.1.0"
description = ""
authors = ["Kyle Caron"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.11"
matplotlib = "^3.8.3"
seaborn = "^0.13.2"
numpy = "^1.26.4"
pandas = "^2.2.0"
jax = "^0.4.24"
torch = "^2.2.0"
numpyro = "^0.13.2"

[tool.poetry.group.dev.dependencies]
notebook = "^7.1.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
